<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2009, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); 
 * you may not use this file except in compliance with the License. 
 * You may obtain a copy of the License at 
 *
 *     http://www.apache.org/licenses/LICENSE-2.0 
 *
 * Unless required by applicable law or agreed to in writing, software 
 * distributed under the License is distributed on an "AS IS" BASIS, 
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
 * See the License for the specific language governing permissions and 
 * limitations under the License.
 */
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Name of the status bar as seen in the applications info settings page. [CHAR LIMIT=12] -->
    <string name="app_label">AntiTheft</string>
    
    <!-- notification strings -->
    <string name="notification_title">AntiTheft Status</string>
    <string name="notification_antitheft_enabled">AntiTheft present. We are watching...</string>
    <string name="notification_antitheft_disabled">AntiTheft disabled. Click Enable button to set it up.</string>
    
    <!--  preferences screen -->
    <string name="preference_title">AntiTheft Settings</string>		
    <string name="parse_data_title">Parse data</string>		
    <string name="parse_app_id_x">Parse Application ID</string>		
    <string name="parse_client_key_x">Parse Client Key</string>		
    <string name="scramble_power_title">Scramble power button option</string>	
    
    <!-- status fragment -->
    <string name="button_report_status">Report status</string>	
    <string name="last_update">Last server update:</string>
    <string name="last_command">Last command performed:</string>
    		
    <!-- switch strings -->		
    <string name="switch_on_text">On</string>		
    <string name="switch_off_text">Off</string>
    
    <!-- parse settings strings -->
    <string name="parse_info">These are Parse keys used inside the APP. If you change them, you will need to reboot your device in order for changes to be taken into consideration.</string>
    <string name="button_update_config">Update Parse Configuration</string>
    <string name="app_id_text">Current application ID:</string>
    <string name="client_key_text">Current client key:</string>

</resources>
